add missing translations

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -81,6 +81,10 @@
       },
       "doghouse_rename_token": {
         "name": "رمز إعادة تسمية بيت الكلب",
+        "description": "قم بشراء إعادة تسمية واحدة لبيت الكلب الخاص بك"
+      },
+      "doghouse_rename": {
+        "name": "رمز إعادة تسمية بيت الكلب",
         "description": "اشترِ إعادة تسمية واحدة لبيت كلبك"
       },
       "repair_50": {
