--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -80,6 +80,10 @@
         "description": "আপনার কুকুরের জন্য একবার নাম পরিবর্তন করুন"
       },
       "doghouse_rename_token": {
+        "name": "ডগহাউস নাম পরিবর্তনের টোকেন",
+        "description": "আপনার ডগহাউসের নাম একবার পরিবর্তন করুন"
+      },
+      "doghouse_rename": {
         "name": "কুকুরঘরের নাম পরিবর্তন টোকেন",
         "description": "আপনার কুকুরঘরের জন্য একবার নাম পরিবর্তন করুন"
       },
