--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -80,6 +80,10 @@
         "description": "अपने कुत्ते के लिए एक बार नाम बदलें"
       },
       "doghouse_rename_token": {
+        "name": "डॉगहाउस नाम बदलने का टोकन",
+        "description": "अपने डॉगहाउस का नाम एक बार बदलें"
+      },
+      "doghouse_rename": {
         "name": "कुत्ताघर नाम बदलने का टोकन",
         "description": "अपने कुत्ताघर के लिए एक बार नाम बदलें"
       },
