--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -80,6 +80,10 @@
         "description": "愛犬の名前を 1 回変更できます"
       },
       "doghouse_rename_token": {
+        "name": "犬小屋のリネームトークン",
+        "description": "犬小屋の名前を1回変更できます"
+      },
+      "doghouse_rename": {
         "name": "犬小屋の改名トークン",
         "description": "犬小屋の名前を 1 回変更できます"
       },
