--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -83,6 +83,10 @@
         "name": "Токен переименования будки",
         "description": "Купите одно переименование для вашей будки"
       },
+      "doghouse_rename": {
+        "name": "Токен переименования будки",
+        "description": "Купите одно переименование для вашей будки"
+      },
       "repair_50": {
         "name": "Ремонт 50",
         "description": "Это отремонтирует 50 л.с. вашей будки"
