--- a/src/i18n/ur.json
+++ b/src/i18n/ur.json
@@ -80,6 +80,10 @@
         "description": "اپنے کتے کے لیے ایک بار نام بدلیں"
       },
       "doghouse_rename_token": {
+        "name": "ڈاگ ہاؤس کا نام بدلنے کا ٹوکن",
+        "description": "اپنے ڈاگ ہاؤس کا نام ایک بار تبدیل کریں"
+      },
+      "doghouse_rename": {
         "name": "کتے کے گھر کا نام بدلنے کا ٹوکن",
         "description": "اپنے کتے کے گھر کے لیے ایک بار نام بدلیں"
       },
