missing translations, fallback for missing transaltions

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -75,6 +75,10 @@
         "name": "Paquete de 6 casetas",
         "description": "Puedes colocar 6 casetas adicionales"
       },
+      "dog_rename": {
+        "name": "Ficha de cambio de nombre de perro",
+        "description": "Compra un renombrado para tu perro"
+      },
       "dog_rename_token": {
         "name": "Ficha cambio nombre perro",
         "description": "Compra un renombrado para tu perro"
