--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -75,6 +75,10 @@
         "name": "6 कुत्ताघर पैक",
         "description": "आप 6 अतिरिक्त कुत्ताघर रख सकते हैं"
       },
+      "dog_rename": {
+        "name": "कुत्ते का नाम बदलने का टोकन",
+        "description": "अपने कुत्ते का नाम एक बार बदलें"
+      },
       "dog_rename_token": {
         "name": "कुत्ते का नाम बदलने का टोकन",
         "description": "अपने कुत्ते के लिए एक बार नाम बदलें"
