Implement teleportation to doghouse from the dh list

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -253,6 +253,7 @@
   "editDoghouses": "تحرير بيوت الكلاب",
   "noDoghousesYet": "لا توجد بيوت كلاب حتى الآن",
   "goToMapToBuildFirst": "اذهب إلى الخريطة لبناء أول بيت كلب لك!",
+  "viewOnMap": "عرض على الخريطة",
   "doghouseNamePlaceholder": "اسم بيت الكلب",
   "editName": "تحرير الاسم",
   "findPosition": "العثور على موقعك",
