--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -253,6 +253,7 @@
   "editDoghouses": "ডগহাউস সম্পাদনা করুন",
   "noDoghousesYet": "এখনও কোন ডগহাউস নেই",
   "goToMapToBuildFirst": "আপনার প্রথম ডগহাউস তৈরি করতে মানচিত্রে যান!",
+  "viewOnMap": "মানচিত্রে দেখুন",
   "doghouseNamePlaceholder": "ডগহাউসের নাম",
   "editName": "নাম সম্পাদনা করুন",
   "findPosition": "আপনার অবস্থান খুঁজুন",
