--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -253,6 +253,7 @@
   "editDoghouses": "Hundehütten bearbeiten",
   "noDoghousesYet": "Noch keine Hundehütten",
   "goToMapToBuildFirst": "Gehe zur Karte, um deine erste Hundehütte zu bauen!",
+  "viewOnMap": "Auf der Karte anzeigen",
   "doghouseNamePlaceholder": "Name der Hundehütte",
   "editName": "Namen bearbeiten",
   "findPosition": "Position finden",
