--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -257,6 +257,7 @@
   "editDoghouses": "Edit doghouses",
   "noDoghousesYet": "No doghouses yet",
   "goToMapToBuildFirst": "Go to the map to build your first doghouse!",
+  "viewOnMap": "View on map",
   "doghouseNamePlaceholder": "Doghouse name",
   "editName": "Edit name",
   "findPosition": "Find your position",
