--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -257,6 +257,7 @@
   "editDoghouses": "Editar casetas",
   "noDoghousesYet": "Aún no hay casetas",
   "goToMapToBuildFirst": "¡Ve al mapa para construir tu primera caseta!",
+  "viewOnMap": "Ver en el mapa",
   "doghouseNamePlaceholder": "Nombre de la caseta",
   "editName": "Editar nombre",
   "findPosition": "Encontrar tu posición",
