--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -257,6 +257,7 @@
   "editDoghouses": "Modifier les niches",
   "noDoghousesYet": "Aucune niche pour le moment",
   "goToMapToBuildFirst": "Allez sur la carte pour construire votre première niche !",
+  "viewOnMap": "Voir sur la carte",
   "doghouseNamePlaceholder": "Nom de la niche",
   "editName": "Modifier le nom",
   "findPosition": "Trouver votre position",
