--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -257,6 +257,7 @@
   "editDoghouses": "डॉगहाउस संपादित करें",
   "noDoghousesYet": "अभी तक कोई डॉगहाउस नहीं है",
   "goToMapToBuildFirst": "अपना पहला डॉगहाउस बनाने के लिए मानचित्र पर जाएं!",
+  "viewOnMap": "मानचित्र पर देखें",
   "doghouseNamePlaceholder": "डॉगहाउस का नाम",
   "editName": "नाम संपादित करें",
   "findPosition": "अपनी स्थिति ज्ञात करें",
