--- a/src/i18n/it.json
+++ b/src/i18n/it.json
@@ -257,6 +257,7 @@
   "editDoghouses": "Modifica cuccie",
   "noDoghousesYet": "Nessuna cuccia ancora",
   "goToMapToBuildFirst": "Vai alla mappa per construire la tua prima cuccia!",
+  "viewOnMap": "Vedi sulla mappa",
   "doghouseNamePlaceholder": "Nome della cuccia",
   "editName": "Modifica nome",
   "findPosition": "Trova la tua posizione",
