--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -257,6 +257,7 @@
   "editDoghouses": "犬小屋を編集",
   "noDoghousesYet": "まだ犬小屋がありません",
   "goToMapToBuildFirst": "マップに移動して最初の犬小屋を建てましょう！",
+  "viewOnMap": "地図で表示",
   "doghouseNamePlaceholder": "犬小屋の名前",
   "editName": "名前を編集",
   "findPosition": "現在地を検索",
