--- a/src/i18n/pl.json
+++ b/src/i18n/pl.json
@@ -273,6 +273,7 @@
   "editDoghouses": "Edytuj budy",
   "noDoghousesYet": "Brak bud",
   "goToMapToBuildFirst": "Przejdź do mapy, aby zbudować pierwszą budę!",
+  "viewOnMap": "Pokaż na mapie",
   "doghouseNamePlaceholder": "Nazwa budy",
   "editName": "Edytuj nazwę",
   "findPosition": "Znajdź swoją pozycję",
