--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -253,6 +253,7 @@
   "editDoghouses": "Editar casinhas",
   "noDoghousesYet": "Ainda não há casinhas",
   "goToMapToBuildFirst": "Vá ao mapa para construir sua primeira casinha!",
+  "viewOnMap": "Ver no mapa",
   "doghouseNamePlaceholder": "Nome da casinha",
   "editName": "Editar nome",
   "findPosition": "Encontrar sua posição",
