--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -253,6 +253,7 @@
   "editDoghouses": "Редактировать собачьи будки",
   "noDoghousesYet": "Собачьих будок пока нет",
   "goToMapToBuildFirst": "Перейдите на карту, чтобы построить свою первую собачью будку!",
+  "viewOnMap": "Показать на карте",
   "doghouseNamePlaceholder": "Название собачьей будки",
   "editName": "Изменить имя",
   "findPosition": "Найти свое местоположение",
