--- a/src/i18n/ur.json
+++ b/src/i18n/ur.json
@@ -253,6 +253,7 @@
   "editDoghouses": "ڈاگ ہاؤسز میں ترمیم کریں",
   "noDoghousesYet": "ابھی تک کوئی ڈاگ ہاؤس نہیں ہے",
   "goToMapToBuildFirst": "اپنا پہلا ڈاگ ہاؤس بنانے کے لیے نقشے پر جائیں!",
+  "viewOnMap": "نقشے پر دیکھیں",
   "doghouseNamePlaceholder": "ڈاگ ہاؤس کا نام",
   "editName": "نام میں ترمیم کریں",
   "findPosition": "اپنی پوزیشن تلاش کریں",
