--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -253,6 +253,7 @@
   "editDoghouses": "编辑犬屋",
   "noDoghousesYet": "还没有犬屋",
   "goToMapToBuildFirst": "去地图上建造你的第一个犬屋！",
+  "viewOnMap": "在地图上查看",
   "doghouseNamePlaceholder": "犬屋名称",
   "editName": "编辑名称",
   "findPosition": "找到你的位置",
