dog icon comunnication, transaltion and basic component

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -241,6 +241,11 @@
   "premiumBadge": "ممتاز",
   "premiumExpires": "ينتهي في: {date}",
   "manageSubscription": "إدارة الاشتراك",
+  "premiumRequired": "الأيقونة متاحة فقط لمستخدمي البريميوم.",
+  "iconUpdated": "تم تحديث الأيقونة.",
+  "iconUpdateFailed": "فشل تحديث الأيقونة.",
+  "errors.icon.invalid": "أيقونة غير صالحة.",
+  "errors.icon.premiumRequired": "الأيقونة متاحة فقط لمستخدمي البريميوم.",
   "unlimited": "غير محدود",
   "powerDesc": "الضرر الذي يلحق ببيوت الكلاب. ضرر الهجوم الحالي: {min}–{max}. كل نقطة تزيد الحد الأدنى والأقصى بمقدار 1.",
   "staminaDesc": "يزيد من طاقتك القصوى حتى تتمكن من مهاجمة أو إصلاح بيوت الكلاب الخاصة بك في كثير من الأحيان. الطاقة القصوى الحالية: {n}. (+10 لكل نقطة ، بدءًا من 100)",
