--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -241,6 +241,11 @@
   "premiumBadge": "Premium",
   "premiumExpires": "Läuft ab: {date}",
   "manageSubscription": "Abonnement verwalten",
+  "premiumRequired": "Icon nur für Premium‑Nutzer verfügbar.",
+  "iconUpdated": "Icon aktualisiert.",
+  "iconUpdateFailed": "Icon konnte nicht aktualisiert werden.",
+  "errors.icon.invalid": "Ungültiges Icon.",
+  "errors.icon.premiumRequired": "Icon nur für Premium‑Nutzer verfügbar.",
   "unlimited": "Unbegrenzt",
   "powerDesc": "Schaden an Hundehütten. Aktueller Angriffsschaden: {min}–{max}. Jeder Punkt erhöht Min und Max um 1.",
   "staminaDesc": "Erhöht die maximale Energie, damit du häufiger angreifen oder reparieren kannst. Aktuelle max. Energie: {n}. (+10 pro Punkt, ab 100)",
