--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -243,6 +243,11 @@
   "premiumBadge": "Premium",
   "premiumExpires": "Expires: {date}",
   "manageSubscription": "Manage subscription",
+  "premiumRequired": "Premium required for this icon.",
+  "iconUpdated": "Icon updated.",
+  "iconUpdateFailed": "Failed to update icon.",
+  "errors.icon.invalid": "Invalid icon.",
+  "errors.icon.premiumRequired": "Premium required for this icon.",
   "unlimited": "Unlimited",
   "powerDesc": "Damage dealt to doghouses. Current attack damage: {min}–{max}. Each point increases both min and max by 1.",
   "staminaDesc": "Increases max energy so you can attack or repair your doghouses more often. Current max energy: {n}. (+10 per point, starting from 100)",
