--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -245,6 +245,11 @@
   "premiumBadge": "Premium",
   "premiumExpires": "Expira: {date}",
   "manageSubscription": "Gestionar suscripción",
+  "premiumRequired": "Icono disponible solo para usuarios Premium.",
+  "iconUpdated": "Icono actualizado.",
+  "iconUpdateFailed": "No se pudo actualizar el icono.",
+  "errors.icon.invalid": "Icono no válido.",
+  "errors.icon.premiumRequired": "Icono disponible solo para usuarios Premium.",
   "unlimited": "Ilimitado",
   "powerDesc": "Daño infligido a las casetas. Daño de ataque actual: {min}–{max}. Cada punto aumenta el mínimo y el máximo en 1.",
   "staminaDesc": "Aumenta la energía máxima para poder atacar o reparar tus casetas con más frecuencia. Energía máx. actual: {n}. (+10 por punto, a partir de 100)",
