--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -245,6 +245,11 @@
   "premiumBadge": "Premium",
   "premiumExpires": "Expire : {date}",
   "manageSubscription": "Gérer l’abonnement",
+  "premiumRequired": "Icône réservée aux utilisateurs Premium.",
+  "iconUpdated": "Icône mise à jour.",
+  "iconUpdateFailed": "Échec de la mise à jour de l’icône.",
+  "errors.icon.invalid": "Icône non valide.",
+  "errors.icon.premiumRequired": "Icône réservée aux utilisateurs Premium.",
   "unlimited": "Illimité",
   "powerDesc": "Dégâts infligés aux niches. Dégâts d’attaque actuels : {min}–{max}. Chaque point augmente le min et le max de 1.",
   "staminaDesc": "Augmente l’énergie max pour attaquer ou réparer vos niches plus souvent. Énergie max actuelle : {n}. (+10 par point, à partir de 100)",
