--- a/src/i18n/it.json
+++ b/src/i18n/it.json
@@ -245,6 +245,11 @@
   "premiumBadge": "Premium",
   "premiumExpires": "Scade: {date}",
   "manageSubscription": "Gestisci abbonamento",
+  "premiumRequired": "Icona disponibile solo per utenti Premium.",
+  "iconUpdated": "Icona aggiornata.",
+  "iconUpdateFailed": "Aggiornamento icona non riuscito.",
+  "errors.icon.invalid": "Icona non valida.",
+  "errors.icon.premiumRequired": "Icona disponibile solo per utenti Premium.",
   "unlimited": "Illimitato",
   "powerDesc": "Danni inflitti alle cuccie. Danno d’attacco attuale: {min}–{max}. Ogni punto aumenta sia il min che il max di 1.",
   "staminaDesc": "Aumenta l’energia massima per poter attaccare o riparare più spesso. Energia max attuale: {n}. (+10 per punto, a partire da 100)",
