--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -245,6 +245,11 @@
   "premiumBadge": "プレミアム",
   "premiumExpires": "有効期限: {date}",
   "manageSubscription": "サブスクリプションの管理",
+  "premiumRequired": "このアイコンはプレミアムユーザー専用です。",
+  "iconUpdated": "アイコンを更新しました。",
+  "iconUpdateFailed": "アイコンの更新に失敗しました。",
+  "errors.icon.invalid": "無効なアイコンです。",
+  "errors.icon.premiumRequired": "このアイコンはプレミアムユーザー専用です。", 
   "unlimited": "無制限",
   "powerDesc": "犬小屋に与えるダメージ。現在の攻撃ダメージ: {min}–{max}。1ポイントごとに最小値と最大値が1ずつ増加します。",
   "staminaDesc": "最大エネルギーを増やして、より頻繁に犬小屋を攻撃または修理できるようにします。現在の最大エネルギー: {n}。(1ポイントあたり+10、100から開始)",
