--- a/src/i18n/pl.json
+++ b/src/i18n/pl.json
@@ -259,6 +259,11 @@
   "premiumBadge": "Premium",
   "premiumExpires": "Wygasa: {date}",
   "manageSubscription": "Zarządzaj subskrypcją",
+  "premiumRequired": "Ikona dostępna tylko dla użytkowników Premium.",
+  "iconUpdated": "Zmieniono ikonę.",
+  "iconUpdateFailed": "Nie udało się zmienić ikony.",
+  "errors.icon.invalid": "Nieprawidłowa ikona.",
+  "errors.icon.premiumRequired": "Ikona dostępna tylko dla użytkowników Premium.",
   "unlimited": "Bez limitu",
   "powerDesc": "Zadawane obrażenia budom. Obecne obrażenia ataku: {min}–{max}. Każdy punkt zwiększa zarówno min, jak i max o 1.",
   "staminaDesc": "Zwiększa maksymalną energię, dzięki czemu możesz częściej atakować lub naprawiać swoje budy. Obecna maks. energia: {n}. (+10 za punkt, start od 100)",
