--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -241,6 +241,11 @@
   "premiumBadge": "Premium",
   "premiumExpires": "Expira: {date}",
   "manageSubscription": "Gerenciar assinatura",
+  "premiumRequired": "Ícone disponível apenas para usuários Premium.",
+  "iconUpdated": "Ícone atualizado.",
+  "iconUpdateFailed": "Falha ao atualizar o ícone.",
+  "errors.icon.invalid": "Ícone inválido.",
+  "errors.icon.premiumRequired": "Ícone disponível apenas para usuários Premium.",
   "unlimited": "Ilimitado",
   "powerDesc": "Dano causado às casinhas. Dano de ataque atual: {min}–{max}. Cada ponto aumenta o mínimo e o máximo em 1.",
   "staminaDesc": "Aumenta a energia máxima para você atacar ou reparar as casinhas com mais frequência. Energia máx. atual: {n}. (+10 por ponto, a partir de 100)",
