--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -241,6 +241,11 @@
   "premiumBadge": "Премиум",
   "premiumExpires": "Истекает: {date}",
   "manageSubscription": "Управление подпиской",
+  "premiumRequired": "Иконка доступна только пользователям Premium.",
+  "iconUpdated": "Иконка обновлена.",
+  "iconUpdateFailed": "Не удалось обновить иконку.",
+  "errors.icon.invalid": "Недопустимая иконка.",
+  "errors.icon.premiumRequired": "Иконка доступна только пользователям Premium.",
   "unlimited": "Неограниченно",
   "powerDesc": "Урон, наносимый собачьim будкам. Текущий урон от атаки: {min}–{max}. Каждое очко увеличивает как мин, так и макс на 1.",
   "staminaDesc": "Увеличивает максимальную энергию, чтобы вы могли чаще атаковать или ремонтировать свои собачьи будки. Текущая максимальная энергия: {n}. (+10 за очко, начиная со 100)",
