--- a/src/i18n/ur.json
+++ b/src/i18n/ur.json
@@ -241,6 +241,11 @@
   "premiumBadge": "پریمیم",
   "premiumExpires": "میعاد ختم ہونے کی تاریخ: {date}",
   "manageSubscription": "سبسکرپشن کا نظم کریں",
+  "premiumRequired": "یہ آئیکن صرف پریمیم صارفین کے لئے دستیاب ہے۔",
+  "iconUpdated": "آئیکن اپ ڈیٹ ہو گیا۔",
+  "iconUpdateFailed": "آئیکن اپ ڈیٹ ناکام ہو گیا۔",
+  "errors.icon.invalid": "غیر معتبر آئیکن۔",
+  "errors.icon.premiumRequired": "یہ آئیکن صرف پریمیم صارفین کے لئے دستیاب ہے۔", 
   "unlimited": "لامحدود",
   "powerDesc": "ڈاگ ہاؤسز کو پہنچنے والا نقصان۔ موجودہ حملے کا نقصان: {min}–{max}۔ ہر پوائنٹ न्यूनतम اور زیادہ سے زیادہ دونوں کو 1 سے بڑھاتا ہے۔",
   "staminaDesc": "زیادہ سے زیادہ توانائی کو بڑھاتا ہے تاکہ آپ اپنے ڈاگ ہاؤسز پر زیادہ کثرت سے حملہ یا مرمت कर سکیں۔ موجودہ زیادہ سے زیادہ توانائی: {n}۔ (+10 فی پوائنٹ، 100 سے شروع)",
