--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -241,6 +241,11 @@
   "premiumBadge": "高级会员",
   "premiumExpires": "到期时间: {date}",
   "manageSubscription": "管理订阅",
+  "premiumRequired": "此图标仅对高级用户开放。",
+  "iconUpdated": "图标已更新。",
+  "iconUpdateFailed": "图标更新失败。",
+  "errors.icon.invalid": "无效的图标。",
+  "errors.icon.premiumRequired": "此图标仅对高级用户开放。", 
   "unlimited": "无限",
   "powerDesc": "对犬屋造成的伤害。当前攻击伤害: {min}–{max}。每点增加最小和最大伤害1点。",
   "staminaDesc": "增加最大能量，以便您可以更频繁地攻击或修复您的犬屋。当前最大能量: {n}。 (每点+10，从100开始)",
